# taskgen

./: Cargo.toml  LICENSE  README.md  taskgen.sh
.github/workflows/: publish-taskgen.yml
docs/: index.html
src/: main.rs
