[package]
name = "taskgen"
version = "0.1.0"
edition = "2021"
description = "A Rust program to manage systemd timers and services."
authors = ["dnviti@gmail.com"]
license = "MIT"

[dependencies]
clap = "4.5.23"
ini = "1.3.0"
configparser = "3.1.0"
prettytable = "0.10.0"

[[bin]]
name = "taskgen"
path = "src/main.rs"