[package]
name = "taskgen"
version = "0.1.0"
edition = "2021"
description = "A Rust program to manage systemd timers and services."
authors = ["dnviti@gmail.com"]
license = "MIT"

[dependencies]
clap = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "taskgen"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"